<resources>
    <string name="app_name">Praca inzynierska</string>
    <string name="welcome">Witaj ponownie!</string>
    <string name="welcome_user">Witaj, </string>
    <string name="registration">Rejestracja</string>
    <string name="create_account">Załóż konto</string>
    <string name="email">Email</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj się</string>
    <string name="no_account">Nie masz konta?</string>
    <string name="exist_account">Masz już konto?</string>
    <string name="register">Zarejestruj się</string>
    <string name="example_email">" jan.nowak@gmail.com"</string>
    <string name="first_name">Imię*</string>
    <string name="first_name_empty">Uzupełnij swoje imię</string>
    <string name="last_name">Nazwisko*</string>
    <string name="last_name_empty">Uzupełnij swoje nazwisko</string>
    <string name="email1">Adres e-mail*</string>
    <string name="email1_already_exists">Istnieje już konto o podanym adresie email</string>
    <string name="register_success">Zarejestrowano pomyślnie</string>
    <string name="email1_empty">Uzupełnij swój adres email</string>
    <string name="email1_does_not_match_pattern">Podany ciąg znaków nie jest adresem email</string>
    <string name="phone_number">Numer telefonu*</string>
    <string name="phone_number_empty">Uzupełnij swój numer telefonu</string>
    <string name="password1">Hasło*</string>
    <string name="password1_empty">Uzupełnij swoje hasło</string>
    <string name="password1_too_short">Hasło musi składać się z co najmniej 6 znaków</string>
    <string name="login_password_error_empty">Wpisz swoje hasło</string>
    <string name="login_password_error_too_short">Hasło musi składać się z co najmniej 6 znaków</string>
    <string name="login_email_error_empty">Wpisz swój adres email</string>
    <string name="login_success">Zalogowano pomyślnie</string>
    <string name="login_fail">Wystąpił błąd logowania. Spróbuj ponownie</string>
    <string name="change_password_error_empty">Podaj dotychczasowe hasło</string>
    <string name="change_password_error_new_empty">Podaj nowe hasło</string>
    <string name="change_password_error_repeat_empty">Powtórz nowe hasło</string>
    <string name="change_password_error_old_incorrect">Podane hasło jest nieprawidłowe</string>
    <string name="change_password_error_too_short">Hasło musi składać się z co najmniej 6 znaków</string>
    <string name="change_password_error_mismatch">Podane hasła różnią się</string>
    <string name="change_password_success">Hasło zostało zmienione</string>
    <string name="change_password_fail">Hasło nie zostało zmienione</string>
    <string name="change_email_success">Email został zmieniony</string>
    <string name="change_email_fail">Email nie został zmieniony</string>
    <string name="change_personal_data_error_empty">Nie zmodyfikowałeś żadnych danych. Żeby opuścić tryb edycji, wciśnij przycisk "Anuluj"</string>
    <string name="edit_event_error_empty">Nie zmodyfikowałeś żadnych danych. Żeby opuścić tryb edycji, wciśnij przycisk "Anuluj"</string>
    <string name="your_events">Twoje wydarzenia</string>
    <string name="your_events_empty">Nie masz w tym momencie żadnych wydarzeń.\n\n Utwórz wydarzenie poprzez kliknięcie przycisku "+".</string>
    <string name="all_events">Zaakceptowane wydarzenia</string>
    <string name="all_events_empty">Nie bierzesz tym momencie udziału w żadnym wydarzeniu</string>
    <string name="countdown">Najbliższe wydarzenie już za:</string>
    <string name="new_event">Nowe wydarzenie</string>
    <string name="event">Wydarzenie</string>
    <string name="event_data">Dane wydarzenia</string>
    <string name="event_data_general">Ogólne dane wydarzenia</string>
    <string name="event_data_additional">Dodatkowe dane wydarzenia</string>
    <string name="event_duration">Czas trwania wydarzenia</string>
    <string name="edit_event_duration">Zmień czas trwania wydarzenia</string>
    <string name="modify_event_data">Zmień dane wydarzenia</string>
    <string name="modify_general_event_data">Zmień ogólne dane wydarzenia</string>
    <string name="modify_additional_event_data">Zmień dodatkowe dane wydarzenia</string>
    <string name="event_name">Nazwa</string>
    <string name="event_author">Autor</string>
    <string name="event_date_start">Data rozpoczęcia</string>
    <string name="event_date_finish">Data zakończenia</string>
    <string name="event_time_start">Godzina rozpoczęcia</string>
    <string name="event_time_finish">Godzina zakończenia</string>
    <string name="event_whole_date_start">Czas rozpoczęcia wydarzenia</string>
    <string name="event_whole_date_finish">Czas zakończenia wydarzenia</string>
    <string name="event_location">Lokalizacja</string>
    <string name="event_description">Opis</string>
    <string name="event_guest_list">Lista gości</string>
    <string name="event_new_guest_list">Lista nowych gości</string>
    <string name="event_empty_fields">Uzupełnij wszystkie pola!</string>
    <string name="event_dates_incorrect">Wprowadzono niepoprawne daty!</string>
    <string name="event_budget_empty_fields">Uzupełnij wszystkie pola!</string>
    <string name="event_cost_delete">Usuń</string>
    <string name="event_cost_cancel">Anuluj</string>
    <string name="event_cost_select_action">Wybierz akcję</string>
    <string name="to_do_delete">Usuń</string>
    <string name="to_do_cancel">Anuluj</string>
    <string name="message_delete">Usuń</string>
    <string name="message_cancel">Anuluj</string>
    <string name="score_delete">Usuń</string>
    <string name="score_cancel">Anuluj</string>
    <string name="to_do_select_action">Wybierz akcję</string>
    <string name="message_select_action">Wybierz akcję</string>
    <string name="score_select_action">Wybierz akcję</string>
    <string name="event_add_success">Wydarzenie zostało utworzone</string>
    <string name="event_add_fail">Wydarzenie nie zostało utworzone</string>
    <string name="edit_event_guest_list">Edytuj dotychczasową listę gości</string>
    <string name="event_guest_search_list">Dodaj gości</string>
    <string name="event_guest_search_list_error_duplicate">Taki użytkownik istnieje już na liście gości</string>
    <string name="edit_event_guest_search_list">Dodaj nowych gości</string>
    <string name="event_guest_search">Wyszukaj użytkownika...</string>
    <string name="event_image">Ustaw tło wydarzenia</string>
    <string name="set_event_budget">Ustaw budżet wydarzenia</string>
    <string name="edit_event_budget">Zmień budżet wydarzenia</string>
    <string name="edit_event_image">Zmień tło wydarzenia</string>
    <string name="event_ready">Gotowe</string>
    <string name="event_cancel">Anuluj</string>
    <string name="account_settings">Ustawienia konta</string>
    <string name="account_does_not_exist">Użytkownik nie istnieje</string>
    <string name="account_error">Wystąpił błąd w odczycie danych z bazy</string>
    <string name="app_settings">Ustawienia ogólne</string>
    <string name="personal_data">Dane osobowe</string>
    <string name="edit_personal_data">Edytuj dane osobowe</string>
    <string name="change_password">Zmień hasło</string>
    <string name="change_password_old">Wpisz dotychczasowe hasło:</string>
    <string name="change_password_new">Wpisz nowe hasło:</string>
    <string name="change_password_repeat">Powtórz nowe hasło:</string>
    <string name="confirm_change_password">Zatwierdź zmiany</string>
    <string name="reject_change_password">Odrzuć zmiany</string>
    <string name="account_first_name">Imię</string>
    <string name="account_last_name">Nazwisko</string>
    <string name="account_email">Adres email</string>
    <string name="account_phone_number">Numer telefonu</string>
    <string name="account_change_password">Zmień hasło</string>
    <string name="account_photo_delete">Usuń zdjęcie profilowe</string>
    <string name="confirm_edit_personal_data">Zatwierdź zmiany</string>
    <string name="reject_edit_personal_data">Odrzuć zmiany</string>
    <string name="navigation_drawer_open">Otwórz szufladę</string>
    <string name="navigation_drawer_close">Zamknij szufladę</string>
    <string name="navigation_drawer_home">Strona główna</string>
    <string name="navigation_drawer_my_invitations">Moje zaproszenia</string>
    <string name="navigation_drawer_past_events">Archiwum wydarzeń</string>
    <string name="navigation_drawer_account_settings">Ustawienia konta</string>
    <string name="navigation_drawer_app_settings">Ustawienia</string>
    <string name="navigation_drawer_logout">Wyloguj się</string>
    <string name="mini_event_dash">-</string>
    <string name="change_language">Zmień język</string>
    <string name="change_language_confirm">Zatwierdź</string>
    <string name="language_polish">polski</string>
    <string name="language_english">angielski</string>
    <string name="edit_event">Edytuj wydarzenie</string>
    <string name="delete_guest">Usuń gościa</string>
    <string name="delete_event">Usuń</string>
    <string name="cancel_delete_event">Anuluj</string>
    <string name="delete_old_guest">Usuń zaproszonego gościa</string>
    <string name="cancel_delete_guest">Anuluj</string>
    <string name="my_invitations_list">Moje zaproszenia</string>
    <string name="invitation_author">Autor:   </string>
    <string name="my_no_invitations_list">Nie masz w tym momencie żadnych zaproszeń</string>
    <string name="no_settle_expense_list">Nie masz w tym momencie żadnych wydatków do rozliczenia</string>
    <string name="my_no_past_events_list">Nie masz w tym momencie żadnych zakończonych wydarzeń</string>
    <string name="chat_no_messages_list">Nie masz w tym momencie żadnych wiadomości</string>
    <string name="no_score_list">Nie masz w tym momencie żadnych wyników</string>
    <string name="past_events">Archiwum wydarzeń</string>
    <string name="past_events_start">Początek</string>
    <string name="past_events_finish">Koniec</string>
    <string name="to_do_title">Tytuł</string>
    <string name="to_do_description">Opis</string>
    <string name="to_do_done">Wykonane zadania: </string>
    <string name="event_cost_title">Tytuł</string>
    <string name="event_cost_value">Koszt</string>
    <string name="event_budget">Budżet: </string>
    <string name="event_budget_left">Pozostały budżet: </string>
    <string name="event_cost_text">Koszt: </string>
    <string name="common_expense_sum">Wydano: </string>
    <string name="common_expense_to_settle">Do rozliczenia: </string>
    <string name="common_expense_error">Tylko autor wydarzenia lub płacący może usunąć wydatek z listy</string>
    <string name="scoreboard_error">Tylko autor wydarzenia może usunąć wynik z listy</string>
    <string name="to_do_error">Tylko autor wydarzenia lub twórca może usunąć zadanie z listy</string>
    <string name="message_error">Tylko autor wydarzenia lub nadawca może usunąć wiadomość z chatu</string>
    <string name="signout_title">Wylogowywanie</string>
    <string name="signout_message">Czy chcesz się wylogować?</string>
    <string name="signout_yes">Tak</string>
    <string name="signout_no">Nie</string>
    <string name="signout_success">Wylogowano pomyślnie</string>
    <string name="event_delete_title">Usunięcie wydarzenia</string>
    <string name="event_delete_message">Czy na pewno chcesz usunąć wydarzenie?</string>
    <string name="event_delete_yes">Tak</string>
    <string name="event_delete_no">Nie</string>
    <string name="event_delete_success">Usunięto wydarzenie pomyślnie</string>
    <string name="common_expense_user_paying">Płacący: </string>
    <string name="to_do_creator">"Twórca: "</string>
    <string name="settle_expense">Rozliczenia</string>
    <string name="settle_expense_item_paid">wydana suma: </string>
    <string name="settle_expense_details">Detale rozliczenia</string>
    <string name="settle_expense_per_person">Wydane pieniądze do rozliczenia</string>
</resources>