<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/navigation_drawer_home" />

        <item
            android:id="@+id/nav_my_invitations"
            android:icon="@drawable/ic_invitation"
            android:title="@string/navigation_drawer_my_invitations" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_calendar"
            android:title="@string/navigation_drawer_calendar" />

        <item
            android:id="@+id/nav_account_settings"
            android:icon="@drawable/ic_account"
            android:title="@string/navigation_drawer_account_settings" />

        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_app_settings"
            android:title="@string/navigation_drawer_app_settings" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/navigation_drawer_logout" />

    </group>

</menu>