<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".EditAccountSettingsFragment">

    <TextView
        android:id="@+id/editPersonalDataTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/edit_personal_data"
        android:textColor="@color/colorTextDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_background"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editAccountFirstNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/account_first_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark" />

        <EditText
            android:id="@+id/editAccountLastNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/account_last_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark" />

        <EditText
            android:id="@+id/editAccountEmailEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/account_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorTextDark" />

        <EditText
            android:id="@+id/editAccountPhoneNumberEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/account_phone_number"
            android:inputType="phone"
            android:textColor="@color/colorTextDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86">

        <Button
            android:id="@+id/confirmEditPersonalDataButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button_outline"
            android:fontFamily="@font/montserrat"
            android:text="@string/confirm_edit_personal_data"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark" />

        <Button
            android:id="@+id/rejectEditPersonalDataButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button_outline"
            android:fontFamily="@font/montserrat"
            android:text="@string/reject_edit_personal_data"
            android:textAllCaps="false"
            android:textColor="@color/colorTextDark" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>