<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/pastEventLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pastEventNameTextView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:fontFamily="@font/montserrat"
                android:text="Nazwa wydarzenia"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/past_events_start"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pastEventDateStartTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/event_date_start"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/pastEventTimeStartTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/event_time_start"
                        android:textSize="16dp" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/past_events_finish"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/pastEventDateFinishTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/event_date_finish"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/pastEventTimeFinishTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/event_time_finish"
                        android:textSize="16dp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>

